<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="head">SoS.yNc</string>
    <string name="app_name">SoS.yNc</string>
    <!-- Strings for the launch screen -->
    <string name="launch_fbSync">Sync contacts with FB</string>    
    <string name="app_name1">SoS.yNc_editsettings</string>
    <string name="app_name2">SoS.yNc_editsettingsmenu</string>
    <string name="app_name3">SoS.yNc_displayrules</string>
    <string name="fb_sync">Facebook Synchronization</string>
	<string name="google_calender">Google Calender</string>
	<string name="edit_settings">Edit Settings</string>
	<string name="no_group">No Group selected</string>
	<string name="no_event">No Event selected</string>
	<string name="no_action">No Action selected</string>
	<string name="create_rule">Create Rule</string>
	<!-- Attributes for the contact settings service -->
    <string name="contactsettingsServiceLbl">Change Contact Settings Service</string>
    <!-- Attributes for the calendar update service -->
    <string name="calendarupdateServiceLbl">Calendar Update Service</string>
	<string name="ok">OK</string>
	<string name="type">Event Type</string>
	<string name="group">Select Group</string>
	<string name="action1">Select Action</string>
	<string name="event_type">Choose Type of Event</string>
	<string name="priority1">Assign Priority</string>
	<string name="priority">Assign Priority</string>
    <string-array name="events_array">
        <item>Meeting</item>
        <item>Party</item>
        <item>Studying</item>
        <item>Hangout</item>
    </string-array>
    
    
    <string-array name="priority_array">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    
    <string name="action">Choose Type of Action</string>
    <string-array name="action_array">
        <item>Ring as Silent</item>
        <item>Assign Ringtone</item>
        <item>Send to Voicemail</item>
    </string-array>
	
</resources>
