<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
	android:id="@+id/app_name" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/app_name"
    android:textSize="50px"
    android:textStyle="bold"
    android:typeface="serif"
    />  
    
<TextView  
	android:id="@+id/eventtype" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/app_name" 
    android:text="@string/type"
    />

<Spinner 
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/event_type"
        android:layout_below="@id/eventtype"
        android:layout_centerHorizontal="true"
    />
    
<TextView  
	android:id="@+id/group" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/spinner" 
    android:text="@string/group"
    />

<CheckBox android:id="@+id/check1"
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:layout_below="@id/group" 
	 android:text="Family" />

<CheckBox android:id="@+id/check2"
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:layout_below="@id/check1" 
	 android:text="Friends" />

<CheckBox android:id="@+id/check3"
	 android:layout_width="wrap_content"
	 android:layout_height="wrap_content"
	 android:layout_below="@id/check2" 
	 android:text="Colleagues" />

<TextView  
	android:id="@+id/action1" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:layout_below="@id/check3" 
    android:text="@string/action1"
    />
    
<Spinner 
        android:id="@+id/spinner1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/action"
        android:layout_below="@id/action1"
        android:layout_centerHorizontal="true"
    />


<Button android:id="@+id/ok"    
			android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:text="OK"
            android:textStyle="bold"/>
                      

</RelativeLayout>